@@ -1,8 +1,6 @@
 launchapps_images_DATA = \
 	launchapps.png \
-	launchapps-bg-default.jpg \
-	orange-indicator.png \
-	white-indicator.png
+	launchapps-bg-default.jpg
 	
 launchapps_imagesdir = $(datadir)/lxpanel/images
 
