@@ -1,4 +1,16 @@
 
+2017-11-02  Alexandre C Vieira <acamargo.vieira@gmail.com>
+
+	* Page indicator
+
+2017-11-01  Alexandre C Vieira <acamargo.vieira@gmail.com>
+
+	* Applicações posicionadas, teclas +/- funcionando, iniciando implementação do indicators
+
+2017-10-28  Alexandre C Vieira <acamargo.vieira@gmail.com>
+
+	* launchapps.c (lapps_create_main_window): Added indicators
+
 2017-10-27  Alexandre C Vieira <acamargo.vieira@gmail.com>
 
 	* Image background alterada: jpg(-KB), imagem Debian verde
